--- a/src/index.html
+++ b/src/index.html
@@ -54,29 +54,30 @@
   <hr class="mx-auto text-zinc-900"/>
   <main class="mx-auto">
     <div class="absolute inset-0 z-0 bg-[linear-gradient(to_right,#4f46e520_1px,transparent_1px),linear-gradient(to_bottom,#4f46e520_1px,transparent_1px)] bg-[size:4rem_4rem] [mask-image:radial-gradient(ellipse_60%_50%_at_50%_0%,#000_70%,transparent_100%)]"></div>
-    <div class=" relative bg-gradient-to-br from-indigo-500/20 to-transparent pt-15 pb-15">
-      <h1 class="text-[3.5vh] text-center mb-5 h-fit font-mono">Riccardo Cinaglia</h1>
+    <div class=" relative bg-gradient-to-br from-indigo-500/20 to-transparent pt-25 pb-25">
+      <h1 class="text-[3.5vh] text-center mb-2 h-fit font-mono">Riccardo Cinaglia</h1>
+      <p class="text-center mb-5 font-mono">Studente presso IIS "Fermi Sacconi CPIA" - Ascoli Piceno</p>
       
-      <p class="text-center w-[75%] mx-auto">
+      <p class="text-center w-[70%] mx-auto">
         "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
         enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
         reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
         culpa qui officia deserunt mollit anim id est laborum."
       </p>
-      <button class="bg-white text-black p-2 px-4 rounded-4xl mt-5 mx-auto flex">
+      <button class="bg-white text-black p-2 px-4 rounded-4xl mt-10 mx-auto flex">
         <a href="#Contatti">Contatti ↓</a>
       </button>
     </div>
     <hr class="mx-auto text-zinc-900"/>
     <div id="Competenze" class="container mx-auto px-4 py-5 relative">
-      <h1 class="text-[3.5vh] text-center mt-10 font-bold font-mono">COMPETENZE_TECNICHE</h1>
+      <h1 class="text-[3.5vh] text-center mt-10 font-bold font-mono mb-5">COMPETENZE_TECNICHE</h1>
       <div class="text-center mb-8 mt-2">
         <h2 class="text-2xl md:text-3xl mb-4">Programmazione e Sviluppo Web</h2>
         <p class="text-white md:text-lg max-w-2xl mx-auto">
-          Competenze legate alla creazione e gestione di software, applicazioni e siti web con i diversi linguaggi e Framework
+          Competenze legate alla creazione e gestione di software, applicazioni e siti web con i diversi linguaggi (di cui alcuni imparati da autodidatta) e Framework
         </p>
       </div>
-      <div class="flex flex-wrap justify-center gap-4 w-[70%] mx-auto">
+      <div class="flex flex-wrap justify-center gap-4 w-[70%] mx-auto mb-10">
         <!-- C++ -->
         <div class="flex flex-col items-center p-4 hover:scale-105 transition-transform w-1/3 sm:w-1/4 md:w-1/5 lg:w-1/6">
           <div class="h-16 w-16 md:h-20 md:w-20 mb-2">
@@ -141,28 +142,64 @@
           <span class="text-sm md:text-base text-center">Tailwind CSS</span>
         </div>
       </div> 
-    </div> 
+      <div class="text-center mb-8 mt-2">
+        <h2 class="text-2xl md:text-3xl mb-4">Sistemi Operativi</h2>
+        <p class="text-white md:text-lg max-w-2xl mx-auto">
+          Esperienza pluriennale sia con Windows che con OS Linux (Ho usato iverse distribuzioni Debian-Based, Fedora, e attualmente uso Arch Linux BTW)
+        </p>
+      </div>
+      <div class="flex flex-wrap justify-center gap-4 w-[70%] mx-auto mb-10">
+        <!-- Windows -->
+        <div class="flex flex-col items-center p-4 hover:scale-105 transition-transform w-1/3 sm:w-1/4 md:w-1/5 lg:w-1/6">
+          <div class="h-16 w-16 md:h-20 md:w-20 mb-2">
+            <img src="./assets/images/windows.svg" alt="windows">
+          </div>
+          <span class="text-sm md:text-base text-center">Windows</span>
+        </div>
+        <!-- Linux -->
+        <div class="flex flex-col items-center p-4 hover:scale-105 transition-transform w-1/3 sm:w-1/4 md:w-1/5 lg:w-1/6">
+          <div class="h-16 w-16 md:h-20 md:w-20 mb-2">
+            <img src="./assets/images/linux.svg" alt="linux">
+          </div>
+          <span class="text-sm md:text-base text-center">Linux</span>
+        </div>
+      </div>
+      <div class="text-center mb-8 mt-2">
+        <h2 class="text-2xl md:text-3xl mb-4">PenTesting e Cyber Sicurezza di base</h2>
+        <p class="text-white md:text-lg max-w-2xl mx-auto">
+          Esperienza di base (e da autodidatta) in Sicurezza Informatica e Petetration Testing e alcuni dei Tool più famosi in questo ambito
+        </p>
+      </div>
+      <div class="flex flex-wrap justify-center gap-4 w-[70%] mx-auto mb-10">
+        <!-- Kali Linux -->
+        <div class="flex flex-col items-center p-4 hover:scale-105 transition-transform w-1/3 sm:w-1/4 md:w-1/5 lg:w-1/6">
+          <div class="h-16 w-16 md:h-20 md:w-20 mb-2">
+            <img src="./assets/images/kali.svg" alt="kali">
+          </div>
+          <span class="text-sm md:text-base text-center">Kali Linux</span>
+        </div>
+      </div>
+      <div class="text-center mb-8 mt-2">
+        <h2 class="text-2xl md:text-3xl mb-4">RadioAmatore</h2>
+        <p class="text-white md:text-lg max-w-2xl mx-auto">
+          Da poco nel campo delle Software-Defined-Radio (nel tempo libero intercetto satelliti e aerei)
+        </p>
+      </div>
+    </div>
+
     <div id="Progetti" class="mt-10 mb-10">
       <hr class="mx-auto text-zinc-900"/>
-      <h1 class="text-[3.5vh] text-center mt-10 font-bold font-mono">PROGETTI</h1>
-        <p class="text-center">Sezione in manutenzione...</p>
-        <!--
-        <div class="flex mx-auto justify-center mb-5">
-          <div class="max-w-sm w-[95%] lg:max-w-[85%] lg:flex">
-            <div class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" style="background-image: url('./assets/images/satellite.jpg')">
+      <h1 class="text-[3.5vh] text-center mt-10 font-bold font-mono mb-5">PROGETTI</h1>
+      <p class="text-center" hidden>Work in progress...</p>
+      <div id="progetto" class="max-w-sm w-full lg:max-w-[50%] lg:flex mx-auto mb-5">
+        <div class="rounded-tl-lg rounded-bl-lg h-48 lg:h-auto lg:w-48 flex-none bg-cover text-center overflow-hidden" style="background-image: url('./assets/images/satellite.jpg')"></div>
+        <div class="rounded-br-lg rounded-tr-lg border-r border-b border-l border-zinc-900 lg:border-l-0 lg:border-t lg:border-zinc-900 bg-black p-4 flex flex-col justify-between leading-normal">
+          <div class="mb-8">
+            <div class="font-bold text-xl mb-2">Intercettazione Satellitare</div>
+            <p class="text-base">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.</p>
           </div>
-            <div class="border-r text-white border-b border-l border-zinc-800 lg:border-l-0 lg:border-t lg:border-zinc-800 bg-black rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal">
-              <div class="mb-8">
-                <div class="font-bold text-xl mb-2">Intercettazione Satelliti</div>
-                <p class="text-base">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.</p>
-              </div>
-              </div>
-            
-            </div>
         </div>
-    </div>
-    </div>
-    -->
+      </div>
   </main>
 <footer class="text-center m-auto pb-20 items-center justify-center">
     <hr class="text-zinc-900 mb-5 mx-auto text-center"/>
