fix project container borders

--- a/src/index.html
+++ b/src/index.html
@@ -54,10 +54,8 @@
   <hr class="mx-auto text-zinc-900"/>
   <main class="mx-auto">
     <div class="absolute inset-0 z-0 bg-[linear-gradient(to_right,#4f46e520_1px,transparent_1px),linear-gradient(to_bottom,#4f46e520_1px,transparent_1px)] bg-[size:4rem_4rem] [mask-image:radial-gradient(ellipse_60%_50%_at_50%_0%,#000_70%,transparent_100%)]"></div>
-    <div class=" relative bg-gradient-to-br from-indigo-500/20 to-transparent pt-25 pb-25">
-      <h1 class="text-[3.5vh] text-center mb-2 h-fit font-mono">Riccardo Cinaglia</h1>
-      <p class="text-center mb-5 font-mono">Studente presso IIS "Fermi Sacconi CPIA" - Ascoli Piceno</p>
-      
+    <div class="relative bg-gradient-to-br from-indigo-500/20 to-transparent pt-15 pb-15">
+      <h1 class="text-[3.5vh] text-center mb-5 h-fit font-mono">Riccardo Cinaglia</h1>
       <p class="text-center w-[70%] mx-auto">
         "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
         enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
@@ -191,9 +189,10 @@
       <hr class="mx-auto text-zinc-900"/>
       <h1 class="text-[3.5vh] text-center mt-10 font-bold font-mono mb-5">PROGETTI</h1>
       <p class="text-center" hidden>Work in progress...</p>
-      <div id="progetto" class="max-w-sm w-full lg:max-w-[50%] lg:flex mx-auto mb-5">
-        <div class="rounded-tl-lg rounded-bl-lg h-48 lg:h-auto lg:w-48 flex-none bg-cover text-center overflow-hidden" style="background-image: url('./assets/images/satellite.jpg')"></div>
-        <div class="rounded-br-lg rounded-tr-lg border-r border-b border-l border-zinc-900 lg:border-l-0 lg:border-t lg:border-zinc-900 bg-black p-4 flex flex-col justify-between leading-normal">
+      <div id="progetto" class="max-w-sm w-full lg:max-w-[50%] lg:flex mx-auto mb-5 border border-zinc-900">
+        <div class="h-48 lg:h-auto lg:w-48 flex-none bg-cover text-center overflow-hidden" style="background-image: url('./assets/images/satellite.jpg')"></div>
+        <hr class="mx-auto text-zinc-900"/>
+        <div class="sm:border-t border-t border-zinc-900 lg:border-l md:border-l bg-black p-4 flex flex-col justify-between leading-normal">
           <div class="mb-8">
             <div class="font-bold text-xl mb-2">Intercettazione Satellitare</div>
             <p class="text-base">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.</p>
