--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
       <a href="https://riccardocinaglia.it"><img src="assets/images/logo.svg" alt="logo" class="w-10"/></a>
       <nav>
         <ul class="gap-6 list-none hidden md:flex space-x-4 mt-0.5">
-          <li><a href="#Home" class="hover:underline">HOME</a></li>
-          <li><a href="#Competenze" class="hover:underline">COMPETENZE_TECNICHE</a></li>
+          <li><a href="#" class="hover:underline">HOME</a></li>
+          <li><a href="#Competenze" class="hover:underline">COMPETENZE TECNICHE</a></li>
           <li><a href="#Progetti" class="hover:underline">PROGETTI</a></li>
           <li><a href="#Contatti" class="hover:underline">CONTATTI</a></li>
         </ul>
@@ -45,8 +45,8 @@
 
   <div id="fullscreenMenu" class="font-mono fixed inset-0 bg-black bg-opacity-90 text-white flex flex-col justify-center items-center space-y-6 text-2xl opacity-0 pointer-events-none transform scale-95 transition-all duration-300 z-40">
     <ul>
-      <li><a href="#Home" class="hover:underline">HOME</a></li>
-      <li><a href="#Competenze" class="hover:underline">COMPETENZE_TECNICHE</a></li>
+      <li><a href="#" class="hover:underline">HOME</a></li>
+      <li><a href="#Competenze" class="hover:underline">COMPETENZE TECNICHE</a></li>
       <li><a href="#Progetti" class="hover:underline">PROGETTI</a></li>
       <li><a href="#Contatti" class="hover:underline">CONTATTI</a></li>
     </ul>
@@ -68,7 +68,7 @@
     </div>
     <hr class="mx-auto text-zinc-900"/>
     <div id="Competenze" class="container mx-auto px-4 py-5 relative">
-      <h1 class="text-[3.5vh] text-center mt-10 font-bold font-mono mb-5">COMPETENZE_TECNICHE</h1>
+      <h1 class="text-[3.5vh] text-center mt-10 font-bold font-mono mb-5">COMPETENZE TECNICHE</h1>
       <div class="text-center mb-8 mt-2">
         <h2 class="text-2xl md:text-3xl mb-4">Programmazione e Sviluppo Web</h2>
         <p class="text-white md:text-lg max-w-2xl mx-auto">
@@ -169,13 +169,6 @@
         </p>
       </div>
       <div class="flex flex-wrap justify-center gap-4 w-[70%] mx-auto mb-10">
-        <!-- Kali Linux -->
-        <div class="flex flex-col items-center p-4 hover:scale-105 transition-transform w-1/3 sm:w-1/4 md:w-1/5 lg:w-1/6">
-          <div class="h-16 w-16 md:h-20 md:w-20 mb-2">
-            <img src="./assets/images/kali.svg" alt="kali">
-          </div>
-          <span class="text-sm md:text-base text-center">Kali Linux</span>
-        </div>
       </div>
       <div class="text-center mb-8 mt-2">
         <h2 class="text-2xl md:text-3xl mb-4">RadioAmatore</h2>
@@ -183,8 +176,8 @@
           Da poco nel campo delle Software-Defined-Radio (nel tempo libero intercetto satelliti e aerei)
         </p>
       </div>
+      
     </div>
-
     <div id="Progetti" class="mt-10 mb-10">
       <hr class="mx-auto text-zinc-900"/>
       <h1 class="text-[3.5vh] text-center mt-10 font-bold font-mono mb-5">PROGETTI</h1>
@@ -199,14 +192,23 @@
           </div>
         </div>
       </div>
-  </main>
+    </main>
+    <div id="cv">
+      <hr class="text-zinc-900 mb-5 mx-auto text-center"/>
+      <div class="text-center mb-8 mt-2">
+        <h2 class="text-2xl md:text-3xl mt-10">Scarica il Curriculum Vitae</h2>
+        <button class="bg-white text-black p-2 px-4 rounded-4xl mt-5 mx-auto flex">
+          <a>Download CV ↓</a>
+        </button>
+      </div>
+    </div>
 <footer class="text-center m-auto pb-20 items-center justify-center">
     <hr class="text-zinc-900 mb-5 mx-auto text-center"/>
     <div id="Contatti">
         <h2 class="font-bold">CONTATTI</h2>
         <p>Email: <a href="mailto:info@riccardocinaglia.it">info@riccardocinaglia.it</a></p>
     </div>
-    <a href="#Home"><img src="assets/images/logo.svg" alt="logo" class="w-10 mx-auto mt-5 mb-5"/></a>
+    <a href="#"><img src="assets/images/logo.svg" alt="logo" class="w-10 mx-auto mt-5 mb-5"/></a>
     <small>Copyright &copy; 2025 | Riccardo Cinaglia</small>
 </footer>
   </footer>
